--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -34,10 +34,13 @@ button:hover {
     position: fixed;
     width: 100%;
     height: 100%;
-    background: #FFF9C4;
-    opacity: 0.5;
+    background: rgba(255, 250, 196, 0.5);
     top: 0;
     z-index: 99;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .play_container {
@@ -94,6 +97,23 @@ button:hover {
     font-weight: normal;
 }
 
+#messageboard {
+    visibility: hidden;
+    z-index: 100;
+    background-color: white;
+    opacity: 0.8;
+    border-radius: 5%;
+
+    text-align: center;
+    letter-spacing: 0.2rem;
+    line-height: 1.4;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 /* MEDIA QUERIES */
 @media (orientation: landscape) {
     .play_container {
@@ -115,7 +135,13 @@ button:hover {
         height: 12%;
         width: 66%;
         left: 17%;
-        top: 10%;
+        top: 12%;
+        font-size: 2.5vw;
+    }
+
+    #messageboard {
+        height: 20%;
+        padding: 1%;
         font-size: 2.5vw;
     }
 }
@@ -142,6 +168,11 @@ button:hover {
         width: 100%;
         left: 0%;
         top: 1%;
+        font-size: 2.5vh;
+    }
+    #messageboard {
+        width: 66%;
+        height: 10%;
         font-size: 2.5vh;
     }
 }
